Adding campus tv files

--- a/Campus RadioTv/app_marketing.html
+++ b/Campus RadioTv/app_marketing.html
@@ -274,7 +274,7 @@
     
     
       <section class="mt-5 mx-0">
-        <div class="jumbotron jumbotron-fluid text-white py-5" style="background-image: linear-gradient(to left, #0f3b80, #035290, #12689e, #2e7ea9, #4b93b3);">
+        <div class="jumbotron jumbotron-fluid text-white py-5" style="background: #6043a3">
           <div class="container py-5">
 
             <div class="row justify-content-center   text-center mb-5">
