--- a/Campus RadioTv/attract_fund.html
+++ b/Campus RadioTv/attract_fund.html
@@ -162,8 +162,9 @@
         </div>
       </div>
     </div>
-    <div class="jumbotron jumbotron-fluid" style="background-image: url(images/p_etc.jpg);
-    background-size: cover;">
+
+
+    <div class="jumbotron jumbotron-fluid" style="background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);">
       <div class="container">
         <section class="ftco-section services-section text-white">
           <div class="container">
@@ -368,7 +369,7 @@
         </div>
       </div>
       <section class="mt-5 mx-0">
-        <div class="jumbotron jumbotron-fluid text-white py-5" style="background: #6927ff">
+        <div class="jumbotron jumbotron-fluid text-white py-5" style="background: #051937">
           <div class="container py-5">
 
             <div class="row justify-content-center   text-center mb-5">
