--- a/Campus RadioTv/CoRewards.html
+++ b/Campus RadioTv/CoRewards.html
@@ -369,7 +369,7 @@
                             <div class="card-body my-4 ">
 
                                 <p><i class="fas fa-recycle fa-2x white-text"></i></p>
-                                <h5 class="black-text mb-0">Accessible</h5>
+                                <h5 class="white-text mb-0">Accessible</h5>
 
                             </div>
 
