adding modified page1 and page2 , page3

--- a/Startup world/page1.html
+++ b/Startup world/page1.html
@@ -112,33 +112,33 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <!-- <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg> -->
-            <img src="img/1611_Article_Collab_118593481_Subscription_Monthly_M.jpg" width="100%" height="100%" alt="Startupworld Slider">
+            <img src="img/Adobe_Blog-Header-images_1640x920_35.jpg" width="100%" height="100%" alt="Startupworld Slider">
             <div class="container">
               <div class="carousel-caption text-left">
-                <h1>Example headline.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                <h1>Readers and Elders for social network between youth and elders</h1>
+                <p style="color: black;">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                 <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
             <!-- <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg> -->
-            <img src="img/startupworld_slider_ios.jpg" width="100%" height="100%" alt="Startupworld Slider">
+            <img src="img/0813ca406b3f8a95056800f34bb93bb8-social-network-illustration.jpg" width="100%" height="100%" alt="Startupworld Slider">
             <div class="container">
               <div class="carousel-caption">
-                <h1>Another example headline.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                <h1>Readers and Elders for social network between youth and elders</h1>
+                <p style="color: black;">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                 <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
             <!-- <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg> -->
-            <img src="img/Création-de-startup-Conseils-pour-choisir-son-comptable.jpg" width="100%" height="100%" alt="Startupworld Slider">
+            <img src="img/1_kC8rI-n-dfZrIazOrs0-Ag.png" width="100%" height="100%" alt="Startupworld Slider">
             <div class="container">
               <div class="carousel-caption text-right">
-                <h1>One more for good measure.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                <h1>Readers and Elders for social network between youth and elders</h1>
+                <p style="color: black;">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                 <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
               </div>
             </div>
@@ -162,7 +162,7 @@
 
           <div class="col-md-4 col-lg-4">
             <div class="card" style="width: 18rem;">
-              <img src="img/how-to-estimate-startup-costs.jpg" class="card-img-top" alt="...">
+              <img src="img/th (36).jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -173,7 +173,7 @@
 
           <div class="col-md-4 col-lg-4">
             <div class="card" style="width: 18rem;">
-              <img src="img/human-resources.jpg" class="card-img-top" alt="...">
+              <img src="img/th (32).jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -206,7 +206,7 @@
           </div>
           <div class="col-md-5">
             <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg> -->
-            <img src="img/EntrepreneurshipEducationHeader.jpg" width="100%" height="100%" alt="Startupworld Slider">
+            <img src="img/th (39).jpg" width="100%" height="100%" alt="Startupworld Slider">
           </div>
         </div>
     
@@ -220,7 +220,7 @@
           </div>
           <div class="col-md-5 order-md-1">
             <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg> -->
-            <img src="img/sized_Rob-Thompson-April-14-2015.jpg" width="100%" height="100%" alt="Startupworld Slider">
+            <img src="img/th (34).jpg" width="100%" height="100%" alt="Startupworld Slider">
           </div>
         </div>
 
